# aoc2018

./: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/day1/: freq.h
src/day2/: inv.h
src/day3/: fabric_cut.cpp  fabric_cut.h
