set(BINARY_NAME "${PROJECT_NAME}")

#Configure paths
set(BINARY_MODULE_PATH  "${PROJECT_SOURCE_DIR}/src")
set(BINARY_SRC_PATH     "${BINARY_MODULE_PATH}")
set(BINARY_INCLUDE_PATH "${BINARY_MODULE_PATH}")

include_directories(${BINARY_INCLUDE_PATH})

file(GLOB_RECURSE BIN_HEADER_FILES "${BINARY_INCLUDE_PATH}/*.h")
file(GLOB_RECURSE BIN_SOURCE_FILES "${BINARY_SRC_PATH}/*.cpp")

add_executable(${BINARY_NAME} ${BIN_SOURCE_FILES} ${BIN_HEADER_FILES})

file(COPY ${CMAKE_CURRENT_SOURCE_DIR}/day3/input.txt
     DESTINATION ${CMAKE_CURRENT_BINARY_DIR}/)
